--- a/src/MinMe.Blazor/_Imports.razor
+++ b/src/MinMe.Blazor/_Imports.razor
@@ -1,15 +1,14 @@
 ﻿@using System.Net.Http
 @using System.Threading.Tasks
-@using System.Reactive.Threading.Tasks
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using ReactiveUI
+@using global::Blazor.Fluxor
+@using global::Blazor.Fluxor.Components
 @using MinMe.Blazor
 @using MinMe.Blazor.Shared
 @using MinMe.Blazor.Services
-@using MinMe.Blazor.ViewModels
-@using MinMe.Blazor.Views
+@using MinMe.Blazor.Components
