--- a/src/MinMe.Blazor/Pages/FetchData.razor
+++ b/src/MinMe.Blazor/Pages/FetchData.razor
@@ -37,7 +37,7 @@ else
 }
 
 @code {
-    private WeatherForecast[] forecasts;
+    private WeatherForecast[]? forecasts = null;
 
     protected override async Task OnInitializedAsync()
     {
