--- a/src/MinMe.Blazor/_Imports.razor
+++ b/src/MinMe.Blazor/_Imports.razor
@@ -6,8 +6,15 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+
 @using global::Blazor.Fluxor
 @using global::Blazor.Fluxor.Components
+
+@using GridBlazor
+@using GridBlazor.Pages
+@using GridShared
+@using GridShared.Utility
+
 @using MinMe.Blazor
 @using MinMe.Blazor.Shared
 @using MinMe.Blazor.Services
