--- a/src/MinMe.Blazor/Pages/_Host.cshtml
+++ b/src/MinMe.Blazor/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="_content/Blazored.Toast/blazored-toast.css" rel="stylesheet" />
+    <link href="_content/GridBlazor/css/gridblazor.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -32,6 +33,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="_content/GridBlazor/js/gridblazor.js"></script>
     <script src="_content/Blazor.Fluxor/index.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
