--- a/src/MinMe.Blazor/Shared/NavMenu.razor
+++ b/src/MinMe.Blazor/Shared/NavMenu.razor
@@ -28,20 +28,10 @@
             </li>
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="slides">
-                    <span class="oi oi-spreadsheet" aria-hidden="true"></span> Slides
+                    <span class="oi oi-spreadsheet" aria-hidden="true"></span> Slides (@fileContent.Slides.Count)
                 </NavLink>
             </li>
         }
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
     </ul>
 </div>
 
