--- a/src/MinMe.Blazor/Components/PublishSlides.razor
+++ b/src/MinMe.Blazor/Components/PublishSlides.razor
@@ -8,8 +8,10 @@
 @inject NotificationService NotificationService
 
 <div class="container-fluid">
-    <h1>Choose PowerPoint file:</h1>
     <div class="row">
+        <div class="row">
+            <h3>Choose PowerPoint file:</h3>
+        </div>
         <div class="col-md-auto">
             <button class="btn btn-info"
                     @onclick="OpenFile">
