--- a/src/MinMe.Blazor/_Imports.razor
+++ b/src/MinMe.Blazor/_Imports.razor
@@ -9,6 +9,8 @@
 
 @using global::Blazor.Fluxor
 @using global::Blazor.Fluxor.Components
+@using Blazored.Toast.Services
+@using BlazorInputFile
 
 @using GridBlazor
 @using GridBlazor.Pages
