--- a/src/MinMe.Blazor/Pages/_Host.cshtml
+++ b/src/MinMe.Blazor/Pages/_Host.cshtml
@@ -35,6 +35,7 @@
 
     <script src="_content/Blazor.Fluxor/index.js"></script>
     <script src="_content/GridBlazor/js/gridblazor.js"></script>
+    <script src="_content/BlazorInputFile/inputfile.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
