--- a/src/MinMe.Avalonia/Views/MainWindow.xaml
+++ b/src/MinMe.Avalonia/Views/MainWindow.xaml
@@ -5,18 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:MinMe.Avalonia.Views;assembly=MinMe.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        Width="400" Height="200"
+        Width="700" Height="350"
         x:Class="MinMe.Avalonia.Views.MainWindow"
         Icon="/Assets/minme-logo.ico"
-        Title="MinMe">
-
-    <Design.DataContext>
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
-
-    <Grid RowDefinitions="*,Auto">
-        <views:PowerPointView ></views:PowerPointView>
-        <views:DragAndDropPage Grid.Row="1"></views:DragAndDropPage>
-    </Grid>
-
+        Title="MinMe"
+        Content="{Binding Content}">
 </Window>
