Core library renamed

--- a/src/MinMe.Blazor/Pages/Parts.razor
+++ b/src/MinMe.Blazor/Pages/Parts.razor
@@ -3,7 +3,7 @@
 @using global::Blazor.Fluxor
 @using global::MinMe.Blazor.Store.Document
 @using Microsoft.Extensions.Primitives
-@using MinMe.Core.Model
+@using MinMe.Analyzers.Model
 @inject PartsGridService PartsGridService
 @inject IState<DocumentState> DocumentState
 
