Dedicated parts info view with conditional formatting and part usage data

--- a/src/MinMe.Avalonia/Views/MainView.xaml
+++ b/src/MinMe.Avalonia/Views/MainView.xaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:mm="clr-namespace:MinMe.Avalonia.Views"
+             xmlns:view="clr-namespace:MinMe.Avalonia.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
              x:Class="MinMe.Avalonia.Views.MainView">
     <UserControl.Styles>
@@ -46,7 +46,7 @@
       </Style>
     </UserControl.Styles>
     <Grid RowDefinitions="50,*">
-      <mm:ActionsPanelView DataContext="{Binding ActionsPanelViewModel}"></mm:ActionsPanelView>
+      <view:ActionsPanelView DataContext="{Binding ActionsPanelViewModel}"></view:ActionsPanelView>
       <TabControl Grid.Row="1" Margin="0,2,0,0">
         <TabItem Header="Overview">
           <Grid Margin="5" RowDefinitions="Auto,*">
@@ -70,14 +70,7 @@
           <TabItem.Header>
             <TextBlock Text="{Binding FileContentInfo.Parts.Count, StringFormat=Parts ({0:D})}"></TextBlock>
           </TabItem.Header>
-          <DataGrid Margin="10" Items="{Binding Parts}">
-            <DataGrid.Columns>
-              <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="Auto"/>
-              <DataGridTextColumn Header="Size" Binding="{Binding Size}" Width="Auto"/>
-              <DataGridTextColumn Header="Type" Binding="{Binding PartType}" Width="*"/>
-              <DataGridTextColumn Header="Content Type" Binding="{Binding ContentType}" Width="Auto"/>
-            </DataGrid.Columns>
-          </DataGrid>
+          <view:PartsInfoView DataContext="{Binding PartsInfoViewModel}"></view:PartsInfoView>
         </TabItem>
       </TabControl>
     </Grid>
