--- a/src/MinMe.Avalonia/Views/ActionsPanelView.xaml
+++ b/src/MinMe.Avalonia/Views/ActionsPanelView.xaml
@@ -12,8 +12,16 @@
   </UserControl.Styles>
   <StackPanel Orientation="Horizontal">
     <Button DockPanel.Dock="Left" Command="{Binding OpenCommand}">Open File</Button>
-    <Separator Width="30"></Separator>
-    <Button Command="{Binding OptimizeCommand}">Optimize</Button>
+    <Separator Width="20"></Separator>
     <Button Command="{Binding PublishCommand}">Publish Slides</Button>
+    <Separator Width="20"></Separator>
+    <Border BorderThickness="1">
+      <Grid ColumnDefinitions="Auto,5,130" RowDefinitions="*,*">
+        <Button Grid.RowSpan="2" Command="{Binding OptimizeCommand}">Optimize</Button>
+        <TextBlock Grid.Column="2" VerticalAlignment="Center">Target screen resolution</TextBlock>
+        <ComboBox Grid.Column="2" Grid.Row="1" Items="{Binding PublishModes}"
+                  SelectedItem="{Binding SelectedMode, Mode=TwoWay}" />
+      </Grid>
+    </Border>
   </StackPanel>
 </UserControl>
