--- a/src/MinMe.Avalonia/Views/ActionsPanelView.xaml
+++ b/src/MinMe.Avalonia/Views/ActionsPanelView.xaml
@@ -18,7 +18,7 @@
     <Border BorderThickness="1">
       <Grid ColumnDefinitions="Auto,5,130" RowDefinitions="*,*">
         <Button Grid.RowSpan="2" Command="{Binding OptimizeCommand}">Optimize</Button>
-        <TextBlock Grid.Column="2" VerticalAlignment="Center">Target screen resolution</TextBlock>
+        <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Center">Target screen resolution</TextBlock>
         <ComboBox Grid.Column="2" Grid.Row="1" Items="{Binding PublishModes}"
                   SelectedItem="{Binding SelectedMode, Mode=TwoWay}" />
       </Grid>
